@@ -1,8 +1,11 @@
 Revision history for Perl extension Asterisk::AMI.
 =======
 0.3
+        - Removed method queue_member_toggle
 
-        - Error in method called in queue toggle. Called queue_pause instead of queue_member_pause
+        - Changed queue_member_pause to no longer accept a pause value and instead just pauses the member.
+
+        - Added method queue_member_unpause to unpause a queue member.
 
         NOT DONE
         - Support for old Callback and Timeout syntax has been removed.
